EJBTHREE-2083: initial prototype using JBossASEmbedded